<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_name"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item1"
        android:icon="@drawable/ic_key"
        android:orderInCategory="100"
        android:title="@string/menu_1"
        app:showAsAction="ifRoom" />
    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_item2"
            android:orderInCategory="10"
            android:title="@string/menu_2"
            app:showAsAction="never" />
    </group>

        <item
            android:id="@+id/menu_item3"
            android:orderInCategory="100"
            android:title="@string/menu_3"
            app:showAsAction="never" />
</menu>